# openplanetdata-r2index

./: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
.github/workflows/: e2e.yml  publish.yml  test.yml
python/: README.md  pyproject.toml
python/src/elaunira/r2index/: __init__.py  async_client.py  async_storage.py  client.py  exceptions.py  models.py  storage.py
python/tests/: test_async_client.py  test_client.py  test_download.py  test_models.py
src/: index.ts  types.ts  validation.ts
src/__tests__/: app.test.ts  downloads.test.ts  env.d.ts  setup.ts  validation.test.ts
src/db/: downloads.ts  queries.ts  schema.sql
src/routes/: analytics.ts  downloads.ts  files.ts
