[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elaunira-r2index"
version = "0.8.0"
description = "Python library for uploading files to R2 and registering them with the r2index API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Elaunira" },
]
keywords = ["r2", "cloudflare", "storage", "upload", "index"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aioboto3>=14.0.0",
    "boto3>=1.38.0",
    "filetype>=1.2.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "boto3-stubs[s3]>=1.38.0",
    "build>=1.2.0",
    "mypy>=1.18.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.11.0",
    "twine>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/elaunira/elaunira-r2-index"
Repository = "https://github.com/elaunira/elaunira-r2-index"

[tool.hatch.build.targets.wheel]
packages = ["src/elaunira"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["elaunira"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aioboto3", "aioboto3.*", "aiobotocore", "aiobotocore.*", "filetype"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
